add basemap gallery, add layer list

--- a/style.css
+++ b/style.css
@@ -6,3 +6,18 @@ body,
     height: 100%;
     width: 100%;
 }
+
+#layerList-btn, #basemap-btn {
+    padding: 6px;
+
+}
+
+div.esri-component.esri-layer-list.esri-widget.esri-widget--panel {
+    display: none;
+}
+
+.esri-basemap-gallery {
+    display: none;
+    position: absolute;
+    top: 40px
+}
